# Promethean-Engine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
assets/sample_project/: README.txt
assets/scripts/: test_agent.lua
cmake/: Options.cmake
data/: gameConfig.json
docs/: Extensions.md  FAQ.md  GettingStarted.md  QA_MATRIX.md  architecture.md  roadmap.md  tests.md
include/promethean/ai/: Pathfinder.h
include/promethean/audio/: AudioSettings.h  Music.h
include/promethean/core/: Engine.h  EventBus.h  SettingsManager.h  State.h  StateStack.h
include/promethean/ecs/: BehaviorSystem.h  ecs.h
include/promethean/editor/: EditorUI.h  WorldEditor.h
include/promethean/input/: ActionMapper.h  InputManager.h  PlayerAction.h
include/promethean/pathfinding/: AStar.h
include/promethean/save/: SaveManager.h
include/promethean/ui/: Button.h  HorizontalLayout.h  Slider.h  UIManager.h  VerticalLayout.h  Widget.h  WidgetContainer.h
overlays/nlohmann-json-android-fix/: portfile.cmake
plugins/: spawn_entity.lua
scripts/: patch-json-android.sh  release.sh
src/: CMakeLists.txt  main.cpp
src/ai/: Pathfinder.cpp
src/assets/: AssetManager.cpp  AssetManager.h  TileMap.cpp  TileMap.h
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioSettings.cpp  AudioSettings.h  Music.cpp  Sound.cpp  Sound.h
src/compat/: json_android_fix.h
src/core/: Engine.cpp  Engine.h  EventBus.cpp  LogSystem.cpp  LogSystem.h  SettingsManager.cpp  StateStack.cpp  StateStack.h
src/debug/: DebugOverlay.cpp  DebugOverlay.h  DebugPrimitives.h  ImGuiLayer.cpp  ImGuiLayer.h  RuntimeOverlay.cpp  RuntimeOverlay.h
src/ecs/: BehaviorComponent.cpp  BehaviorComponent.h  BehaviorSystem.cpp  Component.h  Entity.cpp  Entity.h  NavComponent.h  PathfindingSystem.cpp  PathfindingSystem.h  Registry.cpp  Registry.h  System.h  ecs.h
src/editor/: EditorState.cpp  EditorState.h  EditorUI.cpp  EditorUI.h  WorldEditor.cpp
src/input/: ActionMapper.cpp  InputEvents.h  InputManager.cpp
src/pathfinding/: AStar.cpp
src/physics/: CollisionLayer.cpp  CollisionLayer.h
src/plugin/: PluginManager.cpp  PluginManager.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  RenderEvents.h  TileMapRenderer.cpp  TileMapRenderer.h
src/save/: SaveManager.cpp
src/scripting/: ScriptingManager.cpp  ScriptingManager.h
src/ui/: Button.cpp  Button.h  HorizontalLayout.cpp  Slider.cpp  UIButton.cpp  UIButton.h  UIManager.cpp  UIOverlay.cpp  UIOverlay.h  UIWindow.cpp  UIWindow.h  VerticalLayout.cpp  Widget.h
tests/: CMakeLists.txt  EngineTests.cpp  TestMain.cpp  test_dummy.cpp
tests/ai/: TestPathfinder.cpp
tests/assets/: TestAssetManager.cpp  TestTileMap.cpp
tests/audio/: TestAudioBus.cpp  TestAudioEngine.cpp
tests/core/: TestEventBus.cpp  TestLogSystem.cpp  TestStateStack.cpp
tests/debug/: TestDebugOverlay.cpp  TestRuntimeOverlay.cpp
tests/ecs/: TestBehaviorSystem.cpp  TestECS.cpp  TestPathfindingSystem.cpp
tests/editor/: TestWorldEditor.cpp
tests/input/: TestActionMapper.cpp
tests/mocks/: SDL_mixer_stubs.cpp
tests/pathfinding/: TestAStar.cpp
tests/physics/: TestCollisionLayer.cpp
tests/renderer/: TestBatchRenderer.cpp
tests/save/: TestSaveManager.cpp
tests/scripting/: TestPluginManager.cpp  TestScripting.cpp
tests/ui/: TestButton.cpp  TestLayout.cpp  TestSlider.cpp  TestUIManager.cpp
